crates/cfn-lsp/src/snapshots/cfn_lsp__queries__tests__extract_from_outputs.snap
---
source: crates/cfn-lsp/src/queries.rs
expression: refs
---
- typ:
    Ref:
      target: MyTopic
  start:
    line: 5
    col: 16
  end:
    line: 5
    col: 23
