crates/cfn-lsp/src/snapshots/cfn_lsp__queries__tests__extract_from_parameters.snap
---
source: crates/cfn-lsp/src/queries.rs
expression: refs
---
- typ:
    Ref:
      target: MyParameter
  start:
    line: 7
    col: 24
  end:
    line: 7
    col: 35
